Fix thumbnail img running offscreen on mobile.

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -163,6 +163,10 @@
       margin: auto;
       padding: inherit;
     }
+
+    .thumbnail>img{
+      max-width: 100%;
+    }
     /*I hate ipads*/
     .navbar-header {
         float: none;
